# vinculum

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust-clippy.yml
src/: lib.rs  main.rs
