[package]
name = "vinculum"
version = "0.1.0"
description = "Convert arabic numbers to and from roman vinculum numerals"
edition = "2021"
authors = ["Inga Feick", "aszlig"]
license = "Apache-2.0"
keywords = ["roman", "numeral", "vinculum"]

[dependencies]
unicode-segmentation = "1.8.0"
phf = { version = "0.10", features = ["macros"] }

[dev-dependencies]
proptest = "1.0.0"
